--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 10 21:48:09 EDT 2016
-sdk.dir=C\:\\Users\\Frederic\\AppData\\Local\\Android\\Sdk
+#Tue May 10 23:53:52 EDT 2016
+sdk.dir=C\:\\Users\\apollo\\AppData\\Local\\Android\\sdk
